[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel",
    "setuptools_scm>=3.3.1,!=4.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

[tool.cython-lint]
max-line-length = 140

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]
"tests/*" = ["ALL"]

[tool.ruff.lint]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S307",
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
    "PLC0415", # import-outside-top-level
]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
extra-standard-library = ["opcode"]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "single"
