[options]
setup_requires =
  setuptools_scm>=3.3.1

[flake8]
max-line-length = 140
exclude = tests

[tool:pytest]
testpaths =
    tests
addopts =
    -ra
    --strict
    --tb=short

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = hunter
default_section = THIRDPARTY
forced_separate = test_hunter
not_skip = __init__.py
skip = migrations
